==> ycsin/zephyr/drivers/serial/uart_mspm0.c <==
#define DT_DRV_COMPAT ti_mspm0_uart
#include <zephyr/kernel.h>
#include <zephyr/intc2.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/drivers/clock_control/mspm0_clock_control.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/uart.h>
#include <zephyr/irq.h>
#include <ti/driverlib/dl_uart_main.h>

static int uart_mspm0_poll_in(const struct device *dev, unsigned char *c)
{
	const struct uart_mspm0_config *config = dev->config;

	if (DL_UART_Main_receiveDataCheck(config->regs, c) == false) {
		return -1;
	}

	return 0;
}

static void uart_mspm0_poll_out(const struct device *dev, unsigned char c)
{
	const struct uart_mspm0_config *config = dev->config;

	DL_UART_Main_transmitDataBlocking(config->regs, c);
}

static int uart_mspm0_configure(const struct device *dev,
				const struct uart_config *cfg)
{
	const struct uart_mspm0_config *config = dev->config;
	struct uart_mspm0_data *data = dev->data;
	uint32_t value;
	int ret;

	DL_UART_Main_disable(config->regs);

	data->current_speed = cfg->baudrate;

	ret = uart_mspm0_translate_in(uart_parity_to_mspm0,
				      ARRAY_SIZE(uart_parity_to_mspm0),
				      cfg->parity,
				      &value);
	if (ret != 0) {
		return ret;
	}

	data->uart_config.parity = value;

	ret = uart_mspm0_translate_in(uart_stop_bits_to_mspm0,
				      ARRAY_SIZE(uart_stop_bits_to_mspm0),
				      cfg->stop_bits,
				      &value);
	if (ret != 0) {
		return ret;
	}

	data->uart_config.stopBits = value;

	ret = uart_mspm0_translate_in(uart_data_bits_to_mspm0,
				      ARRAY_SIZE(uart_data_bits_to_mspm0),
				      cfg->data_bits,
				      &value);
	if (ret != 0) {
		return ret;
	}

	data->uart_config.wordLength = value;

	ret = uart_mspm0_translate_in(uart_flow_control_to_mspm0,
				      ARRAY_SIZE(uart_flow_control_to_mspm0),
				      cfg->flow_ctrl,
				      &value);
	if (ret != 0) {
		return ret;
	}

	data->uart_config.flowControl = value;

	ret = uart_mspm0_install_configuration(dev);
	if (ret != 0) {
		return ret;
	}

	DL_UART_Main_enable(config->regs);

	return 0;
}

static int uart_mspm0_config_get(const struct device *dev,
				 struct uart_config *cfg)
{
	struct uart_mspm0_data *data = dev->data;
	int ret;

	cfg->baudrate = data->current_speed;

	ret = uart_mspm0_translate_out(uart_parity_to_mspm0,
				       ARRAY_SIZE(uart_parity_to_mspm0),
				       data->uart_config.parity,
				       &cfg->parity);
	if (ret != 0) {
		return ret;
	}

	ret = uart_mspm0_translate_out(uart_stop_bits_to_mspm0,
				       ARRAY_SIZE(uart_stop_bits_to_mspm0),
				       data->uart_config.stopBits,
				       &cfg->stop_bits);
	if (ret != 0) {
		return ret;
	}

	ret = uart_mspm0_translate_out(uart_data_bits_to_mspm0,
				       ARRAY_SIZE(uart_data_bits_to_mspm0),
				       data->uart_config.wordLength,
				       &cfg->data_bits);
	if (ret != 0) {
		return ret;
	}

	ret = uart_mspm0_translate_out(uart_flow_control_to_mspm0,
				       ARRAY_SIZE(uart_flow_control_to_mspm0),
				       data->uart_config.flowControl,
				       &cfg->flow_ctrl);
	if (ret != 0) {
		return ret;
	}

	return 0;
}

static int uart_mspm0_err_check(const struct device *dev)
{
	struct uart_mspm0_data *data = dev->data;

	switch (data->pending_interrupt) {
	case DL_UART_MAIN_IIDX_BREAK_ERROR:
		return UART_BREAK;
	case DL_UART_MAIN_IIDX_FRAMING_ERROR:
		return UART_ERROR_FRAMING;
	default:
		return 0;
	}
}

static int uart_mspm0_fifo_fill(const struct device *dev,
				const uint8_t *tx_data, int size)
{
	const struct uart_mspm0_config *config = dev->config;

	return (int)DL_UART_Main_fillTXFIFO(config->regs,
					    (uint8_t *)tx_data, size);
}

static int uart_mspm0_fifo_read(const struct device *dev,
				uint8_t *rx_data, const int size)
{
	const struct uart_mspm0_config *config = dev->config;

	return (int)DL_UART_Main_drainRXFIFO(config->regs, rx_data, size);
}

static void uart_mspm0_irq_tx_enable(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;

	DL_UART_Main_enableInterrupt(config->regs, UART_MSPM0_TX_INTERRUPTS);
}

static void uart_mspm0_irq_tx_disable(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;

	DL_UART_Main_disableInterrupt(config->regs, UART_MSPM0_TX_INTERRUPTS);
}

static int uart_mspm0_irq_tx_ready(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;
	struct uart_mspm0_data *data = dev->data;

	return ((data->pending_interrupt == DL_UART_MAIN_IIDX_TX) ||
			(data->pending_interrupt == DL_UART_MAIN_IIDX_EOT_DONE))
		&& !DL_UART_Main_isTXFIFOFull(config->regs) ? 1 : 0;
}

static void uart_mspm0_irq_rx_enable(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;

	DL_UART_Main_enableInterrupt(config->regs, UART_MSPM0_RX_INTERRUPTS);
}

static void uart_mspm0_irq_rx_disable(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;

	DL_UART_Main_disableInterrupt(config->regs, UART_MSPM0_RX_INTERRUPTS);
}

static int uart_mspm0_irq_tx_complete(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;

	return (DL_UART_Main_isTXFIFOEmpty(config->regs)) ? 1 : 0;
}

static int uart_mspm0_irq_rx_ready(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;
	struct uart_mspm0_data *data = dev->data;

	return ((data->pending_interrupt == DL_UART_MAIN_IIDX_RX) ||
		(data->pending_interrupt == DL_UART_MAIN_IIDX_RX_TIMEOUT_ERROR)) &&
		!DL_UART_Main_isRXFIFOEmpty(config->regs) ? 1 : 0;
}

static int uart_mspm0_irq_is_pending(const struct device *dev)
{
	struct uart_mspm0_data *data = dev->data;

	return data->pending_interrupt != DL_UART_MAIN_IIDX_NO_INTERRUPT;
}

static void uart_mspm0_irq_callback_set(const struct device *dev,
					uart_irq_callback_user_data_t cb,
					void *cb_data)
{
	struct uart_mspm0_data *const dev_data = dev->data;

	/* Set callback function and data */
	dev_data->cb = cb;
	dev_data->cb_data = cb_data;
}

static void uart_mspm0_isr(const struct device *dev)
{
	struct uart_mspm0_data *const dev_data = dev->data;

	/* Perform callback if defined */
	if (dev_data->cb) {
		dev_data->cb(dev, dev_data->cb_data);
	}
}

static int uart_mspm0_init(const struct device *dev)
{
	const struct uart_mspm0_config *config = dev->config;
	int ret;

	/* Reset power */
	DL_UART_Main_reset(config->regs);
	DL_UART_Main_enablePower(config->regs);
	delay_cycles(CONFIG_MSPM0_PERIPH_STARTUP_DELAY);

	/* Init UART pins */
	ret = pinctrl_apply_state(config->pinctrl, PINCTRL_STATE_DEFAULT);
	if (ret < 0) {
		return ret;
	}

	ret = uart_mspm0_install_configuration(dev);
	if (ret != 0) {
		return ret;
	}

#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	DL_UART_Main_enableFIFOs(config->regs);
	DL_UART_Main_setRXFIFOThreshold(config->regs, DL_UART_RX_FIFO_LEVEL_1_2_FULL);
	DL_UART_Main_setTXFIFOThreshold(config->regs, DL_UART_TX_FIFO_LEVEL_EMPTY);
	DL_UART_Main_setRXInterruptTimeout(config->regs, 15U);
	config->irq_config_func(dev);
#endif /* CONFIG_UART_INTERRUPT_DRIVEN */

	/* Enable UART */
	DL_UART_Main_enable(config->regs);

	return 0;
}
